微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -88,14 +88,29 @@
 4)为景区做增值服务</div>
        </div>
        <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/jingshen.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
            <h6>联合运营</h6>
-           <div class="home_ys_sm">物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。</div>
+           <div class="home_ys_sm"><span class="stro">合作景区收益和付出：<br></span>
+               1)景区提供场地<br>
+2)景区进行产品引导<br>
+3)景区安排人员负责日常维护<br>
+4)双方以一定比例利润分成<br>
+<span class="stro">轻拍科技收益和付出：<br></span>
+1)轻拍科技提供设备和技术支持<br>
+2)为景区增加互联网获客渠道<br>
+3)为景区提供自拍大数据<br></div>
        </div>
        <div class="home_ys icon_ys_right">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/gongjice.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h6>运营商代理</h6>
-           <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
+           <div class="home_ys_sm">代理商收益和付出：<br></span>
+               1)缴纳一定代理费用
+2)代理负责开拓景区及布点
+3)代理负责日常维护
+4)代理可获高比例利润分成
+<span class="stro">轻拍科技收益和付出：<br></span>
+1)轻拍科技提供设备和技术支持
+2)为代理提供软硬件升级</div>
        </div>
         </div>
     </div>
