--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -90,11 +90,11 @@
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
            <h6>联合运营</h6>
-           <div class="home_ys_sm"><span class="stro">合作景区收益和付出：<br></span>
+           <div class="home_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)景区进行产品引导<br>
 3)景区安排人员负责日常维护<br>
-4)双方以一定比例利润分成<br>
+4)双方以一定比例利润分成<br><br>
 <span class="stro">轻拍科技收益和付出：<br></span>
 1)轻拍科技提供设备和技术支持<br>
 2)为景区增加互联网获客渠道<br>
@@ -103,13 +103,13 @@
        <div class="home_ys icon_ys_right">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h6>运营商代理</h6>
-           <div class="home_ys_sm">代理商收益和付出：<br></span>
-               1)缴纳一定代理费用
-2)代理负责开拓景区及布点
-3)代理负责日常维护
-4)代理可获高比例利润分成
+           <div class="home_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
+               1)缴纳一定代理费用<br>
+2)代理负责开拓景区及布点<br>
+3)代理负责日常维护<br>
+4)代理可获高比例利润分成<br><br>
 <span class="stro">轻拍科技收益和付出：<br></span>
-1)轻拍科技提供设备和技术支持
+1)轻拍科技提供设备和技术支持<br>
 2)为代理提供软硬件升级</div>
        </div>
         </div>
