--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,7 +26,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .zclh_img{float: left;width:24%;margin-top: 5px;}
 .img_zc{width: 80px;height: auto;border: none;}
 .zclh_gy{float: left;width:76%; text-align: left;line-height: 22px;color: #333333;font-weight: normal;}
-
+.hzjm_ys{width:26%;height:auto;margin-right: 10%;border-right: 1px dashed #ececec; }
+.hzjm_ys{border-right:none;}
 
 
 
