微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -74,7 +74,7 @@
         <h2>三种合作模式及框架 因为信任所以简单</h2>
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
-                <div class="home_ys hzjm_ys">
+                <div class=" hzjm_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h6>战略合作</h6>
            <div class="home_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
@@ -87,7 +87,7 @@
 3)为景区提供自拍数据<br>
 4)为景区做增值服务</div>
        </div>
-       <div class="home_ys hzjm_ys">
+       <div class=" hzjm_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
            <h6>联合运营</h6>
            <div class="home_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
@@ -100,7 +100,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍大数据<br></div>
        </div>
-       <div class="home_ys hzjm_ys hzjm_ys_right">
+       <div class=" hzjm_ys hzjm_ys_right">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h6>运营商代理</h6>
            <div class="home_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
