微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -100,7 +100,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍大数据<br></div>
        </div>
-       <div class=" hzjm_ys hzjm_ys_right">
+       <div class="hzjm_ys_right">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h6>运营商代理</h6>
            <div class="home_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
