--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,7 @@ h5{font-size: 14px;line-height: 16px; font-weight:100;text-align: center;margin-
 h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 h7{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;margin-bottom: 20px;}
 .stro{font-weight: 400;color: #333333;}
-
+h8{font-size: 24px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 .con_white{width: 80%;margin: 40px auto;text-align: center;padding-top: 10px;}
 .con_gray{width: 100%;background-color: #f6f6f6;clear: both;padding-top:40px; padding-bottom: 40px;}
