微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -77,7 +77,7 @@
                 <div class=" hzjm_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h8>战略合作</h8>
-           <div class="home_ys_sm hzjm_top  zl_text"><span class="stro">合作景区收益和付出：<br></span>
+           <div class="home_ys_sm   zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
 3)景区安排人员负责日常维护<br><br>
@@ -90,7 +90,7 @@
        <div class=" hzjm_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
            <h8>联合运营</h8>
-           <div class="home_ys_sm hzjm_top zl_text"><span class="stro">合作景区收益和付出：<br></span>
+           <div class="home_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)景区进行产品引导<br>
 3)景区安排人员负责日常维护<br>
@@ -103,7 +103,7 @@
        <div class="hzjm_ys_right">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h8>运营商代理</h8>
-           <div class="home_ys_sm hzjm_top zl_text"><span class="stro">代理商收益和付出：<br></span>
+           <div class="home_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
                1)缴纳一定代理费用<br>
 2)代理负责开拓景区及布点<br>
 3)代理负责日常维护<br>
