--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .hzjm_ys{width:27%;height:auto;margin-right: 10%;border-right: 1px dashed #ececec; float: left;}
 .hzjm_ys_right{width:25%;height:auto;border-right:none;float: left;}
 .hzjm_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;}
+.hzjm_ys_img{float:left;width: 100%;overflow: hidden;margin-bottom: 10px;}
 
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
