--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -75,7 +75,7 @@
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
                 <div class=" hzjm_ys">
-           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
+           <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h8>战略合作</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
@@ -88,7 +88,7 @@
 4)为景区做增值服务</div>
        </div>
        <div class=" hzjm_ys">
-           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
+           <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
            <h8>联合运营</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
@@ -101,7 +101,7 @@
 3)为景区提供自拍大数据<br></div>
        </div>
        <div class="hzjm_ys_right">
-           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
+           <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
            <h8>运营商代理</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
                1)缴纳一定代理费用<br>
