微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -37,7 +37,7 @@
     </div>
     </div>
     <div class="con_white">
-       <h2>四大助力景区智慧旅游 共享自拍杆</h2>
+       <h2>共享自拍杆四大助力 景区智慧旅游</h2>
         <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="zl_cont">
             <div class="zl">
