微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -115,8 +115,8 @@
         </div>
     </div>
     <div class="con_white">
-       <h2>炫彩机柜 让自拍杆随借随还</h2>
-        <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
+       <h2>各种方式 等你来撩</h2>
+        <h5>往前一步是幸福 志同道合共创美好</h5>
        <div class="jg_cont">
            <div class="jg_img_cont"><img class="jg_img" src="/static/images/ownpic/cp_jg.jpg"  /></div>
            <div class="jg_sm_cont">
