微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -76,7 +76,7 @@
         <div class="zpg_cont">
                 <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
-           <h8>战略合作</h8>
+           <h8>景区战略合作</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
@@ -89,7 +89,7 @@
        </div>
        <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
-           <h8>联合运营</h8>
+           <h8>景区联合运营</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">合作景区收益和付出：<br></span>
                1)景区提供场地<br>
 2)景区进行产品引导<br>
@@ -118,24 +118,9 @@
        <h2>各种方式 等你来撩</h2>
         <h5>往前一步是幸福 志同道合共创美好</h5>
        <div class="jg_cont">
-           <div class="jg_img_cont"><img class="jg_img" src="/static/images/ownpic/cp_jg.jpg"  /></div>
-           <div class="jg_sm_cont">
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_chuping.jpg"  /></div>
-                   <div class="jg_title">触摸操作屏</div>
-                   <div class="jg_sm_text">选择借还方式<br>选择微信或支付宝二维码<br>支持机柜直接操作归还</div>
-               </div>
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_jinchukou.jpg"  /></div>
-                   <div class="jg_title">自拍杆进出口</div>
-                   <div class="jg_sm_text">手机或触屏控制<br>自动打开电源充足的自拍杆<br>放入后自动归位完成还杆选择借还方式</div>
-               </div>
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_sexi.gif"  /></div>
-                   <div class="jg_title">时尚绚丽机柜</div>
-                   <div class="jg_sm_text">靓丽外观让您轻松识别找到<br>独家炫彩外壳与景点完美融合<br>时尚个性就要不同选择借还方式</div>
-               </div>
-           </div>
+           景区入驻
+           商户合作
+           渠道代理
        </div>
     </div>
 
