微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -86,6 +86,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍数据<br>
 4)为景区做增值服务</div>
+                    <div class="hzjm_lx"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
        </div>
        <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
@@ -113,15 +114,6 @@
 2)为代理提供软硬件升级</div>
        </div>
         </div>
-    </div>
-    <div class="con_white">
-       <h2>各种方式 等你来撩</h2>
-        <h5>往前一步是幸福 志同道合共创美好</h5>
-       <div class="jg_cont">
-           景区入驻
-           商户合作
-           渠道代理
-       </div>
     </div>
 
 
