微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -86,7 +86,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍数据<br>
 4)为景区做增值服务</div>
-                    <div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" title="战略合作">战略合作</a></div>
+                    <div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" target="_blank" title="战略合作">战略合作 ></a></div>
        </div>
        <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
