微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -86,7 +86,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍数据<br>
 4)为景区做增值服务</div>
-                    <div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" target="_blank" title="战略合作">战略合作 ></a></div>
+                    <div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" target="_blank" title="战略合作">联系我们 ></a></div>
        </div>
        <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/lhyy.png' %}"></div>
@@ -100,6 +100,7 @@
 1)轻拍科技提供设备和技术支持<br>
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍大数据<br></div>
+           <div class="hzjm_lx"><a href="https://jinshuju.net/f/MIuFOW" target="_blank" title="联合运营">联系我们 ></a></div>
        </div>
        <div class="hzjm_ys_right">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
@@ -112,6 +113,7 @@
 <span class="stro">轻拍科技收益和付出：<br></span>
 1)轻拍科技提供设备和技术支持<br>
 2)为代理提供软硬件升级</div>
+           <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
        </div>
         </div>
     </div>
