--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -78,7 +78,8 @@
 4)代理可获高比例利润分成<br><br>
 <span class="stro">轻拍科技收益和付出：<br></span>
 1)轻拍科技提供设备和技术支持<br>
-2)为代理提供软硬件升级</div>
+2)为代理提供软硬件升级<br>
+           3)轻拍科技提供品牌和形象授权</div>
            <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
        </div>
         </div>
