微信公众号建设

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 {% endblock %}
 <div class="con_gray">
   <div class="foot_con">
-    <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>微信公众号</div>
+    <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/ewm.jpg' %}" alt="微信公众号"/>微信公众号</div>
     <div class="foot_con_imgbox"><img class="foot_con_img" src="{% static 'images/shenghuohao.png' %}" alt="支付宝生活号"/>支付宝生活号</div>
 </div>
 </div>
