--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -1,42 +1,11 @@
-{% extends "base.html" %}
+{% extends "weixin/base.html" %}
 
 {% load static %}
 
 {% block title %}商家合作{% endblock %}
 
 {% block content %}
-    <div class="cp_content_bg">
-       <div class="cp_content">
-        <div class="head_top">
 
-          <div class="logo">
-            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
-          </div>
-          <div class="navigation">
-            <ul class="menu">
-                <li>
-                    <a href="/home/"><span class="menutitle">首页</span></a>
-                </li>
-                <li>
-                    <span class="crunt">自拍神器</span>
-                </li>
-                <li>
-                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
-                            class="menudesc"></span></a>
-                </li>
-                <li>
-                    <a href="/home/about/"><span class="menutitle">关于我们</span></a>
-                </li>
-            </ul>
-        </div>
-          <div class="star"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
-</div>
-        <div class="cp_slogn">
-            <h1>随用随借 随借随还</h1>
-            <h4>让技术和共享助您，轻松出游，完美自拍，快乐分享</h4>
-        </div>
-    </div>
-    </div>
     <div class="con_white">
        <h2>轻松四步 秒借秒还</h2>
         <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
