微信公众号建设

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -20,7 +20,7 @@
                     <a href="/home/ownpic/"><span class="menutitle">自拍神器</span></a>
                 </li>
                 <li>
-                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
+                    <a href="/home/cooperation/"><span class="menutitle">合作加盟</span><span
                             class="menudesc"></span></a>
                 </li>
                 <li>
