--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -21,7 +21,7 @@
                     <span class="crunt">自拍神器</span>
                 </li>
                 <li>
-                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
+                    <a href="/home/cooperation/"><span class="menutitle">合作加盟</span><span
                             class="menudesc"></span></a>
                 </li>
                 <li>
