--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -22,7 +22,7 @@
                             class="menudesc"></span></a>
                 </li>
                 <li>
-                    <a href="/home/cooperation/"><span class="menutitle">商家合作</span><span
+                    <a href="/home/cooperation/"><span class="menutitle">合作加盟</span><span
                             class="menudesc"></span></a>
                 </li>
                 <li>
