微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -70,7 +70,7 @@
        </div>
        <div class="hzjm_ys_right">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
-           <h8>运营商代理</h8>
+           <h8>城市代理</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
                1)缴纳一定代理费用<br>
 2)代理负责开拓景区及布点<br>
