微信公众号建设

--- a/templates/weixin/output_tip.html
+++ b/templates/weixin/output_tip.html
@@ -7,7 +7,7 @@
 
 {% block content %}
         {% ifequal has_pole 'True' %}
-            <div class="ts_cont ts_cont_all">
+            <div class="ts_cont_all">
                   <img class="zgjs_img" src="{% static '/images/weixin/cgts.gif' %}" alt="出杆提示">
             </div>
              <div class="nr_con">
