--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -329,7 +329,7 @@ input.weui-btn_plain-default{
 .ts_til_test{width: 80px;text-align: center;margin-bottom: -18px;margin-left:auto;margin-right:auto;position: relative;padding: 5px;background-color: white;}
 .sm_cont{width: 100%;float:left;color: #666666;line-height: 24px;font-size: 14px;}
 .sm_cont a{text-decoration: none;color: #cc0099;}
-.col_z{color: #cc0099;font-weight:bold;}
+.col_z{color: #cc0099;font-weight:bold; font-size: 16px;}
 .col_z2{color: #cc0099;font-weight:bold;font-size: 24px;}
 .tj_til{width: 100%;height: 50px;line-height: 50px;text-align: center;color: #333333;}
 .zjjl_con{width: 100%;border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;margin-bottom: 30px;background-color: white;color: #666666;}
