--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -2,99 +2,62 @@
 
 {% load static %}
 
-{% block title %}商家合作{% endblock %}
+{% block title %}合作加盟{% endblock %}
 
 {% block content %}
+    <div class="ab_top">
+        <h1>三种合作模式及框架 因为信任所以简单</h1>
+      服务旅游消费升级，助力景区全域旅游。景区战略合作或联合运营、城市代理商或合伙人，多种合作运营模式。
+    </div>
+    <div class="ab_txt">
+<h2>景区战略合作</h2>
+有管理和运营的景区，有志于发展智慧旅游，对共享自拍杆项目有合作意向，希望引入进驻，进行战略合作。<br>
+<h3>合作景区收益和付出：</h3>
+1)景区提供场地<br>
+2)机柜广告招商管理和收益归景区<br>
+3)景区安排人员负责日常维护<br>
+<h3>轻拍科技收益和付出：</h3>
+1)轻拍科技提供硬件设备<br>
+2)为景区增加互联网获客渠道<br>
+3)为景区提供自拍数据<br>
+4)为景区做增值服务<br><br>
+<div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" target="_blank" title="战略合作">联系我们 ></a></div>
+        <h2>景区联合运营</h2>
+        有管理和运营的景区，有志于发展智慧旅游，希望引入共享自拍杆，进行联合运营，共同提升游客体验。<br>
+        <h3>合作景区收益和付出：</h3>
+1)景区提供场地<br>
+2)景区进行产品引导<br>
+3)景区安排人员负责日常维护<br>
+4)双方以一定比例利润分成<br>
+<h3>轻拍科技收益和付出：</h3>
+1)轻拍科技提供设备和技术支持<br>
+2)为景区增加互联网获客渠道<br>
+3)为景区提供自拍大数据<br><br>
+<div class="hzjm_lx"><a href="https://jinshuju.net/f/MIuFOW" target="_blank" title="联合运营">联系我们 ></a></div>
+<h2>景区战略合作</h2>
+有景区资源或渠道，有开拓景区和基本运营能力。看好共享自拍杆项目，希望将此产品服务引入本地景点。<br>
+<h3>合作景区收益和付出：</h3>
+1)景区提供场地<br>
+2)机柜广告招商管理和收益归景区<br>
+3)景区安排人员负责日常维护<br>
+<h3>轻拍科技收益和付出：</h3>
+1)轻拍科技提供硬件设备<br>
+2)为景区增加互联网获客渠道<br>
+3)为景区提供自拍数据<br>
+4)为景区做增值服务<br><br>
+<div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
 
-    <div class="con_white">
-       <h2>轻松四步 秒借秒还</h2>
-        <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
-       <div class="cp_sylc"></div>
-       <div class="cp_lc_cont">
-            <div class="cp_lc_li">
-                <h6>第一步</h6>
-                <div class="cp_lc_sm">就近机柜，随手可用</div>
-            </div>
-            <div class="cp_lc_li">
-                <h6>第二步</h6>
-                <div class="cp_lc_sm">手机扫码，一秒取杆</div>
-            </div>
-            <div class="cp_lc_li">
-                <h6>第三步</h6>
-                <div class="cp_lc_sm">享受美好，想拍就拍</div>
-            </div>
-            <div class="cp_lc_li cp_lc_li_right">
-                <h6>第四步</h6>
-                <div class="cp_lc_sm">随处可还，便捷低价</div>
-            </div>
-       </div>
-    </div>
-    <div class="zpg_fg"></div>
-    <div class="con_gray">
-        <h2>时尚自拍杆 任你嗨自拍</h2>
-        <h5>设计时尚大方，使用方便灵活，还可应急给手机充电</h5>
-        <div class="zpg_cont">
-            <div class="zpg_cont_li">
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/shaoma.png"  /></div>
-                    <h6>扫码取杆</h6>
-                    <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
+    <div class="ab_txt">
+         <h2>我们要做的事</h2>
+          践行共享新模式，开创经济轻旅行<br>
+        <h3>服务</h3>
+        帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户。
+通过手机扫码即可租借<span class="col_z">自拍杆</span>，用好可就近机柜归还，实现用户轻装出游随手自拍<br>
+自拍杆集成了<span class="col_z">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
+<h3>愿景</h3>
+        以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多旅行装备<br>
+        通过互联网和智能硬件技术，结合<span class="<br>">共享模式</span>，打造新的经济<span class="<br>">轻旅行</span>方式～
                 </div>
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/jiujin.png"  /></div>
-                    <h6>就近可还</h6>
-                    <div class="zpg_left_sm">支持任意机柜可归还自拍杆<br>随您就近还杆，轻松便利</div>
-                </div>
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/chongdian.png"  /></div>
-                    <h6>应急充电</h6>
-                    <div class="zpg_left_sm">自拍杆集成了充电宝<br>为您自拍或摄影保障电力</div>
-                </div>
-            </div>
-            <div class="zpg_cont_li"><img class="zpg_img" src="/static/images/ownpic/cp_zpg.jpg"  /></div>
-            <div class="zpg_cont_li zpg_cont_li_right">
-                <div class="zpg_right">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/mianfei.png"  /></div>
-                    <h6>免费一小时</h6>
-                    <div class="zpg_right_sm">每天一次首小时免费用<br>1小时后，1元/小时，每天8元封顶</div>
-                </div>
-                <div class="zpg_right">
-                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/yajing.png"  /></div>
-                    <h6>部分免押金</h6>
-                    <div class="zpg_right_sm">芝麻信用650分以上，免押金<br>还杆后，押金随时退</div>
-                </div>
-                <div class="zpg_right">
-                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/goumai.png"  /></div>
-                    <h6>喜欢可购买</h6>
-                    <div class="zpg_right_sm">自拍支持出售，仅需49元/根<br>保留超5天未归还，自动转为购买</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="con_white">
-       <h2>炫彩机柜 让自拍杆随借随还</h2>
-        <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
-       <div class="jg_cont">
-           <div class="jg_img_cont"><img class="jg_img" src="/static/images/ownpic/cp_jg.jpg"  /></div>
-           <div class="jg_sm_cont">
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_chuping.jpg"  /></div>
-                   <div class="jg_title">触摸操作屏</div>
-                   <div class="jg_sm_text">选择借还方式<br>选择微信或支付宝二维码<br>支持机柜直接操作归还</div>
-               </div>
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_jinchukou.jpg"  /></div>
-                   <div class="jg_title">自拍杆进出口</div>
-                   <div class="jg_sm_text">手机或触屏控制<br>自动打开电源充足的自拍杆<br>放入后自动归位完成还杆选择借还方式</div>
-               </div>
-               <div class="jg_sm_cont_li">
-                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_sexi.gif"  /></div>
-                   <div class="jg_title">时尚绚丽机柜</div>
-                   <div class="jg_sm_text">靓丽外观让您轻松识别找到<br>独家炫彩外壳与景点完美融合<br>时尚个性就要不同选择借还方式</div>
-               </div>
-           </div>
-       </div>
-    </div>
 
 
 {% endblock %}
