--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -417,6 +417,6 @@ h3{font-size: 14px;font-weight: bold;}
 .zgm_sm{width: 100%;float: left;font-size: 14px;color: #666666;line-height: 30px;}
 .zgm_sm a{text-decoration: none;color: #cc0099;}
 
-.hzjm_lx{float: left;width: 160px;height: 26px;font-size: 14px;border: 1px dashed #cc0099;line-height: 26px;text-align: center;margin-bottom: 20px;}
+.hzjm_lx{float: left;width:100%;height: 26px;font-size: 14px;border: 1px dashed #cc0099;line-height: 26px;text-align: center;margin-bottom: 20px;}
 .hzjm_lx a{text-decoration: none;color: #cc0099;}
 .hzjm_lx a:hover{text-decoration: none;font-weight: bold;}
