微信公众号建设

--- a/templates/weixin/return_tip.html
+++ b/templates/weixin/return_tip.html
@@ -7,7 +7,7 @@
 
 {% block content %}
         {% ifequal has_capacity 'True' %}
-            <div class="ts_cont ts_cont_all">
+            <div class="ts_cont_all">
                   <img class="zgjs_img" src="{% static '/images/weixin/hgts.gif' %}" alt="还杆提示">
             </div>
              <div class="nr_con">
