微信公众号建设

--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -7,10 +7,10 @@
 {% block content %}
     <div class="ab_top">
         <h1>三种合作模式及框架 因为信任所以简单</h1>
-      服务旅游消费升级，助力景区全域旅游。景区战略合作或联合运营、城市代理商或合伙人，多种合作运营模式。
+      旅游消费升级，助力景点全域旅游。景区战略合作或联合运营、城市代理或合伙人，多种合作运营模式。
     </div>
     <div class="ab_txt">
-<h2>景区战略合作</h2>
+<h2>一.景区战略合作</h2>
 有管理和运营的景区，有志于发展智慧旅游，对共享自拍杆项目有合作意向，希望引入进驻，进行战略合作。<br>
 <h3>合作景区收益和付出：</h3>
 1)景区提供场地<br>
@@ -22,7 +22,7 @@
 3)为景区提供自拍数据<br>
 4)为景区做增值服务<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/ssDlGx" target="_blank" title="战略合作">联系我们 ></a></div>
-        <h2>景区联合运营</h2>
+        <h2>二.景区联合运营</h2>
         有管理和运营的景区，有志于发展智慧旅游，希望引入共享自拍杆，进行联合运营，共同提升游客体验。<br>
         <h3>合作景区收益和付出：</h3>
 1)景区提供场地<br>
@@ -34,17 +34,17 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍大数据<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/MIuFOW" target="_blank" title="联合运营">联系我们 ></a></div>
-<h2>景区战略合作</h2>
+<h2>城市代理或合伙人</h2>
 有景区资源或渠道，有开拓景区和基本运营能力。看好共享自拍杆项目，希望将此产品服务引入本地景点。<br>
-<h3>合作景区收益和付出：</h3>
-1)景区提供场地<br>
-2)机柜广告招商管理和收益归景区<br>
-3)景区安排人员负责日常维护<br>
+<h3>代理商收益和付出：</h3>
+1)缴纳一定代理费用<br>
+2)代理负责开拓景区及布点<br>
+3)代理负责日常维护<br>
+4)代理可获高比例利润分成<br>
 <h3>轻拍科技收益和付出：</h3>
-1)轻拍科技提供硬件设备<br>
-2)为景区增加互联网获客渠道<br>
-3)为景区提供自拍数据<br>
-4)为景区做增值服务<br><br>
+1)轻拍科技提供设备和技术支持<br>
+2)为代理提供软硬件升级<br>
+3)轻拍科技提供品牌和形象授权<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
 
     <div class="ab_txt">
