--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -38,7 +38,7 @@
     </div>
      <div class="con_gray">
         <h2>三种合作模式及框架 因为信任所以简单</h2>
-        <h5>景区战略合作或联合运营、城市代理商或合伙人，多种合作运营模式</h5>
+        <h5>景区战略合作或联合运营、城市代理或合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
                 <div class=" hzjm_ys">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
@@ -70,7 +70,7 @@
        </div>
        <div class="hzjm_ys_right">
            <div class="hzjm_ys_img"><img class="icon_img_zl" src="{% static 'images/home/csdl.png' %}"></div>
-           <h8>城市代理</h8>
+           <h8>城市代理或合伙人</h8>
            <div class="hzjm_ys_sm zl_text"><span class="stro">代理商收益和付出：<br></span>
                1)缴纳一定代理费用<br>
 2)代理负责开拓景区及布点<br>
