微信公众号建设

--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -34,7 +34,7 @@
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍大数据<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/MIuFOW" target="_blank" title="联合运营">联系我们 ></a></div>
-<h2>城市代理或合伙人</h2>
+<h2>三.城市代理或合伙人</h2>
 有景区资源或渠道，有开拓景区和基本运营能力。看好共享自拍杆项目，希望将此产品服务引入本地景点。<br>
 <h3>代理商收益和付出：</h3>
 1)缴纳一定代理费用<br>
