微信公众号建设

--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -47,16 +47,13 @@
 3)轻拍科技提供品牌和形象授权<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
 
-    <div class="ab_txt">
-         <h2>我们要做的事</h2>
-          践行共享新模式，开创经济轻旅行<br>
-        <h3>服务</h3>
-        帮助在景点游玩有拍照需要，但没有或忘带自拍杆的用户。
-通过手机扫码即可租借<span class="col_z">自拍杆</span>，用好可就近机柜归还，实现用户轻装出游随手自拍<br>
-自拍杆集成了<span class="col_z">充电宝</span>，让用户在景点尽情自拍或摄影，提供方便并保障手机电力充足<br>
-<h3>愿景</h3>
-        以景点自拍杆为切入点，横向扩展到其他需要自拍的场景，纵向扩展更多旅行装备<br>
-        通过互联网和智能硬件技术，结合<span class="<br>">共享模式</span>，打造新的经济<span class="<br>">轻旅行</span>方式～
+    <div class="ts_cont_all">
+         <h2>联系方式</h2>
+          期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br>
+        <h3>微信小秘书：creaky12</h3>
+        <h3>电话：130 9571 8294</h3>
+        <h3>邮箱：kf@relalive.com</h3>
+
                 </div>
 
 
