--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -46,7 +46,7 @@
 2)为代理提供软硬件升级<br>
 3)轻拍科技提供品牌和形象授权<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
-
+    </div>
     <div class="ts_cont_all">
          <h2>联系方式</h2>
           期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br>
@@ -55,6 +55,5 @@
         <h3>邮箱：kf@relalive.com</h3>
 
                 </div>
-
 
 {% endblock %}
