--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -420,3 +420,5 @@ h3{font-size: 14px;font-weight: bold;}
 .hzjm_lx{float: left;width:100%;height: 26px;font-size: 14px;border: 1px dashed #cc0099;line-height: 26px;text-align: center;margin-bottom: 20px;}
 .hzjm_lx a{text-decoration: none;color: #cc0099;}
 .hzjm_lx a:hover{text-decoration: none;font-weight: bold;}
+
+.ts_cont_bot{background-color: #f8f8f8; padding:0 15px; width: 100%;float: left;text-align:left;line-height: 30px;}
