微信公众号建设

--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -47,7 +47,7 @@
 3)轻拍科技提供品牌和形象授权<br><br>
 <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
     </div>
-    <div class="ts_cont_all">
+    <div class="ts_cont_bot">
          <h2>联系方式</h2>
           期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br>
         <h3>微信小秘书：creaky12</h3>
