微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -421,4 +421,4 @@ h3{font-size: 14px;font-weight: bold;}
 .hzjm_lx a{text-decoration: none;color: #cc0099;}
 .hzjm_lx a:hover{text-decoration: none;font-weight: bold;}
 
-.ts_cont_bot{background-color: #f8f8f8; padding:0 15px; float: left;text-align:left;line-height: 30px;margin-top: 30px;}
+.ts_cont_bot{background-color: #f8f8f8; padding:15px; float: left;text-align:left;line-height: 30px;margin-top: 30px;}
