微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -83,6 +83,9 @@
            <div class="hzjm_lx"><a href="https://jinshuju.net/f/Ixs2wY" target="_blank" title="城市代理">联系我们 ></a></div>
        </div>
         </div>
+        <div class="lxfs">期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br> 微信小秘书：creaky12 &nbsp;&nbsp;
+        电话：130 9571 8294&nbsp;&nbsp;
+        邮箱：kf@relalive.com</div>
     </div>
      <div class="zpg_fg"></div>
      <div class="con_white">
