--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .hzjm_lx{float: left;width: 160px;height: 26px;font-size: 14px;border: 1px dashed #cc0099;line-height: 26px;text-align: center;margin-bottom: 20px;}
 .hzjm_lx a{text-decoration: none;color: #cc0099;}
 .hzjm_lx a:hover{text-decoration: none;font-weight: bold;}
-.lxfs{width: 100%;margin: 30px auto;text-align: center;font-weight: 400;color: #333333;height: 60px;float: left;}
+.lxfs{clear: both; width: 100%;margin: 30px auto;text-align: center;font-weight: 400;color: #333333;height: 60px;float: left;}
 
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
