微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     </div>
-     <div class="con_gray">
+     <div class="con_gray hzjm_top2">
         <h2>三种合作模式及框架 因为信任所以简单</h2>
         <h5>景区战略合作或联合运营、城市代理或合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
