微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -84,7 +84,7 @@
        </div>
 
         </div>
-        <div class="lxfs">期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br> 微信小秘书:creaky12&nbsp;&nbsp;&nbsp;&nbsp;
+        <div class="lxfs">期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬<br> 微信小秘书:creaky12&nbsp;&nbsp;&nbsp;&nbsp;
         电话:130 9571 8294&nbsp;&nbsp;&nbsp;&nbsp;
         邮箱:kf@relalive.com</div>
     </div>
