微信公众号建设

--- a/templates/weixin/cooperation.html
+++ b/templates/weixin/cooperation.html
@@ -49,7 +49,7 @@
     </div>
     <div class="ts_cont_bot">
          <h2>联系方式</h2>
-          期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬。<br>
+          期待您的来电(信)，"共享让出游变得轻松"离不开您的支持和发扬<br>
         <h3>微信小秘书：creaky12</h3>
         <h3>电话：130 9571 8294</h3>
         <h3>邮箱：kf@relalive.com</h3>
