微信公众号建设

--- a/templates/weixin/buy_tip.html
+++ b/templates/weixin/buy_tip.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div class="ts_cont ts_cont_all">
+    <div class="ts_cont">
                   <img class="zgjs_img" src="{% static '/images/weixin/zgm.jpg' %}" alt="购买提示">
     </div>
     <div class="nr_con">
