--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -393,7 +393,7 @@ h3{font-size: 14px;font-weight: bold;}
 .txjd_right_l{float: left;font-size: 14px;line-height: 22px;padding-bottom: 20px;color: #333333;}
 .txjd_time{color: #999999;}
 
-.cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;margin-top: 50px;font-size: 14px;}
+.cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 14px;}
 .cgsm a{text-decoration: none}
 
 .fyzf{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 18px;}
