微信公众号建设

--- a/templates/weixin/buy_tip.html
+++ b/templates/weixin/buy_tip.html
@@ -7,11 +7,11 @@
 {% block content %}
 
     <div class="ts_cont">
-                  <img class="zgjs_img" src="{% static '/images/weixin/zgm.jpg' %}" alt="购买提示">
+       <img class="zgjs_img" src="{% static '/images/weixin/zgm.jpg' %}" alt="购买提示">
     </div>
     <div class="nr_con">
            <div class="cgsm">
-                <span class="col_z">自拍杆爱上您啦</span><br>因保留超过<span class="col_z"> 5 </span>天未归还，系统自动转为购买
+                <span class="col_z2">自拍杆爱上您啦</span><br>因保留超过<span class="col_z"> 5 </span>天未归还，系统自动转为购买
             </div>
     </div>
     <div class="nr_con">
@@ -20,7 +20,6 @@
          1.取杆情况：{{ lend_date }} 于：{{ lend_site }}<br>
           2.了解自拍杆服务协议，查看<a href="/weixin/contract/">租借协议</a>
       </div>
-
     </div>
 
 
