微信公众号建设

--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -324,7 +324,7 @@ input.weui-btn_plain-default{
 .ts_cont_all{background-color: #f8f8f8;height: auto;float: left;text-align: center;margin-bottom: 50px;padding-top: 50px;padding-bottom: 50px;}
 .zgjs_img{width: 45%;height: auto;}
 .nr_con{padding: 0 15px;font-weight: 200;}
-.nr_con_all{padding: 0;background-color:#f8f8f8;height: 100%;}
+.nr_con_all{padding: 0;background-color:#f8f8f8;height:auto;}
 .ts_til{width: 100%;margin: 20px auto;border-bottom: 1px dashed #ececec;color:#999999;text-align: center;font-size: 14px;}
 .ts_til_test{width: 80px;text-align: center;margin-bottom: -18px;margin-left:auto;margin-right:auto;position: relative;padding: 5px;background-color: white;}
 .sm_cont{width: 100%;float:left;color: #666666;line-height: 24px;font-size: 14px;}
