微信公众号建设

--- a/templates/weixin/buy_tip.html
+++ b/templates/weixin/buy_tip.html
@@ -15,8 +15,8 @@
             </div>
     </div>
     <div class="nr_con">
-      <div class="zgm_line"></div>
-      <div class="zgm_sm">
+      <div class="ts_til page__bd_spacing"><div class="ts_til_test">温馨提示</div> </div>
+      <div class="sm_cont">
          1.取杆情况：{{ lend_date }} 于：{{ lend_site }}<br>
           2.了解自拍杆服务协议，查看<a href="/weixin/contract/">租借协议</a>
       </div>
