微信公众号建设

--- a/templates/weixin/privatecenter.html
+++ b/templates/weixin/privatecenter.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="nr_con_all">
+    <div class="nr_con_all_pr">
        <div class="gr_top">
            <img class="gr_tx" src="{{ headimgurl }}" alt="微信头像">
            <div class="gr_nc">{{ nickname }}</div>
