微信公众号建设

--- a/templates/weixin/weixin_return_pay.html
+++ b/templates/weixin/weixin_return_pay.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-     <div class="ts_cont_all">
+     <div class="ts_cont_pay">
        <div class="fyzf">
            <div class="fyzf_h"><div class="fyzf_icon"><img class="zjjl_icon_img" src="{% static '/images/weixin/shichang.png' %}" alt="租借时长"></div><div class="fyzf_h_con">租借时长</div></div>
            <div class="fyzf_time">{{ lend_time_long }}</div>
