--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -346,7 +346,6 @@ input.weui-btn_plain-default{
 .zjjl_zj{width: 100%;float:left;line-height: 24px;text-align: left;height: 60px;}
 .zjjl_icon{width: 20px;height:60px;float: left;margin:4px 10px 0 0;}
 .zjjl_icon_img{width: 18px;height: auto;border: none;}
-.fyzf_icon{width: 20px;height:30px;margin:5px 5px 0 0;}
 .zt_jxz{color:#179B16;}
 .zt_jxz a{color:#179B16;text-decoration: none;}
 .zt_zgm{color:#CE3C39;}
@@ -399,11 +398,12 @@ h3{font-size: 14px;font-weight: bold;}
 .cgsm a{text-decoration: none}
 
 .fyzf{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 18px;}
-.fyzf_h{width: 120px;height: 30px; clear: both; text-align: center;line-height: 30px;font-size: 14px;}
-.fyzf_h_con{width: 100px;float: left;text-align: center;}
-.fyzf_time{width: 100%;text-align: center;font-size: 24px;color: #333333;line-height: 30px;margin-bottom: 30px;font-weight: bold;}
-.fyzf_fee{width: 100%;text-align: center;font-size: 28px;color:#cc0099;line-height: 30px;font-weight: bold;margin-bottom: 30px;}
-.fyzf_dd{width: 100%;float:left;text-align: left;line-height: 30px;font-size: 14px;margin: 30px 0 30px 0}
+.fyzf_h30{clear: both;width: 120px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;}
+.fyzf_h60{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 28px;font-weight: 400;}
+.fyzf_h30_icon{width: 30px;float: left;text-align: center;}
+.fyzf_h30_con{width:90px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
+.img_fyzf{width: 20px;height:auto;border: none;}
+
 
 .cz_tip{width:100%;
     height:100%;
