--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -397,10 +397,10 @@ h3{font-size: 14px;font-weight: bold;}
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 14px;}
 .cgsm a{text-decoration: none}
 
-.fyzf{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 18px;}
-.fyzf_h30{clear: both;width: 120px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;}
-.fyzf_h60{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 28px;font-weight: 400;}
-.fyzf_h30_icon{width: 30px;float: left;text-align: center;}
+.fyzf_h30{clear: both;width: 120px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;margin: 0 auto;}
+.fyzf_h60_fe{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 28px;font-weight: 400;color: #cc0099;}
+.fyzf_h60_ti{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 24px;font-weight: 400;}
+.fyzf_h30_icon{width: 20px;float: left;text-align: center;margin-top: 5px;}
 .fyzf_h30_con{width:90px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
 .img_fyzf{width: 20px;height:auto;border: none;}
 
