--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -403,7 +403,7 @@ h3{font-size: 14px;font-weight: bold;}
 .fyzf_h30_icon{width: 20px;float: left;text-align: center;margin-top: 5px;}
 .fyzf_h30_con{width:90px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
 .img_fyzf{width: 20px;height:auto;border: none;}
-
+.fyzf_dd{width: 100%;float: left;margin: 30px 0 30px 0;}
 
 .cz_tip{width:100%;
     height:100%;
