--- a/templates/weixin/weixin_return_pay.html
+++ b/templates/weixin/weixin_return_pay.html
@@ -11,9 +11,9 @@
      <div class="ts_cont_pay">
 
            <div class="fyzf_h30"><div class="fyzf_h30_icon"><img class="img_fyzf" src="{% static '/images/weixin/shichang.png' %}" alt="租借时长"></div><div class="fyzf_h30_con">租借时长</div></div>
-           <div class="fyzf_h60">{{ lend_time_long }}</div>
+           <div class="fyzf_h60_ti">{{ lend_time_long }}</div>
            <div class="fyzf_h30"><div class="fyzf_h30_icon"><img class="img_fyzf" src="{% static '/images/weixin/feiyong.png' %}" alt="租借费用"></div><div class="fyzf_h30_con">租借费用</div></div>
-           <div class="fyzf_h60">{{ lend_money }}</div>
+           <div class="fyzf_h60_fe">{{ lend_money }}</div>
 
     </div>
     <div class="nr_con">
