--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -322,7 +322,7 @@ input.weui-btn_plain-default{
 
 .ts_cont{width: 100%;height: auto;float: left;text-align: center;margin: 50px auto;}
 .ts_cont_all{background-color: #f8f8f8;height: auto;float: left;text-align: center;margin-bottom: 50px;padding-top: 50px;padding-bottom: 50px;}
-.ts_cont_pay{background-color: #f8f8f8;height: auto;float: left;text-align: center;margin-bottom: 50px;padding-top: 50px;padding-bottom: 50px;width: 100%;}
+.ts_cont_pay{background-color: #f8f8f8;height: auto;float: left;text-align: center;margin-bottom: 30px;padding-top: 50px;padding-bottom: 50px;width: 100%;}
 .zgjs_img{width: 45%;height: auto;}
 .nr_con{padding: 0 15px;font-weight: 200;}
 .nr_con_all{padding: 0;background-color:#f8f8f8;height:auto;}
@@ -397,13 +397,13 @@ h3{font-size: 14px;font-weight: bold;}
 .cgsm{padding: 0 15px;font-weight: 200;text-align: center;line-height: 30px;color: #333333;font-size: 14px;}
 .cgsm a{text-decoration: none}
 
-.fyzf_h30{clear: both;width: 120px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;margin: 0 auto;}
-.fyzf_h60_fe{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 28px;font-weight: 400;color: #cc0099;}
-.fyzf_h60_ti{clear: both;width: 100%;height: 60px;text-align: center;line-height: 60px;font-size: 24px;font-weight: 400;}
-.fyzf_h30_icon{width: 20px;float: left;text-align: center;margin-top: 5px;}
-.fyzf_h30_con{width:90px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
-.img_fyzf{width: 20px;height:auto;border: none;}
-.fyzf_dd{width: 100%;float: left;margin: 30px 0 30px 0;}
+.fyzf_h30{clear: both;width: 100px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;margin: 0 auto;}
+.fyzf_h60_fe{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 28px;font-weight: 300;color: #cc0099;}
+.fyzf_h60_ti{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 24px;font-weight: 400;margin-bottom: 20px;}
+.fyzf_h30_icon{width: 20px;float: left;text-align: center;margin-top: 6px;}
+.fyzf_h30_con{width:80px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
+.img_fyzf{width: 16px;height:auto;border: none;}
+.fyzf_dd{width: 100%;float: left;margin: 30px 0 20px 0;}
 
 .cz_tip{width:100%;
     height:100%;
