--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -398,10 +398,10 @@ h3{font-size: 14px;font-weight: bold;}
 .cgsm a{text-decoration: none}
 
 .fyzf_h30{clear: both;width: 100px;height: 30px;text-align: center;line-height: 30px;font-size: 14px;margin: 0 auto;}
-.fyzf_h60_fe{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 28px;font-weight: 300;color: #cc0099;}
-.fyzf_h60_ti{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 24px;font-weight: 400;margin-bottom: 20px;}
+.fyzf_h60_fe{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 28px;font-weight: 400;color: #cc0099;}
+.fyzf_h60_ti{clear: both;width: 100%;height: 30px;text-align: center;line-height: 30px;font-size: 24px;font-weight: 300;margin-bottom: 20px;}
 .fyzf_h30_icon{width: 20px;float: left;text-align: center;margin-top: 6px;}
-.fyzf_h30_con{width:80px;text-align: center;float: left; font-size: 14px;color: #666666;line-height: 30px;}
+.fyzf_h30_con{width:80px;text-align: left;float: left; font-size: 14px;color: #666666;line-height: 30px;}
 .img_fyzf{width: 16px;height:auto;border: none;}
 .fyzf_dd{width: 100%;float: left;margin: 30px 0 20px 0;}
 
