--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -412,9 +412,9 @@ h3{font-size: 14px;font-weight: bold;}
     left: 0;
     top: 0;
     z-index: 99;}
-.cz_tip_cont{width: 90%;margin: 80px auto;background-color: white; text-align: left;font-weight:400;color: #666666;z-index: 999;line-height: 30px;font-size: 14px;}
+.cz_tip_cont{width: 80%;margin: 80px auto;background-color: white; text-align: left;color: #333333;z-index: 999;line-height: 30px;font-size: 14px;padding: 15px;height: auto;}
 .cz_tip_til{width: 100%;text-align: center;height: 20px;margin: 50px auto;color: #cc0099;font-weight: 400;font-size: 18px;}
-.cz_tip_bot{width: 30%;margin: 50px auto;}
+.cz_tip_bot{width: 60%;margin: 50px auto;}
 
 .zgm_line{width: 100%; border-bottom: 1px solid #f8f8f8;margin: 30px 0;}
 .zgm_sm{width: 100%;float: left;font-size: 14px;color: #666666;line-height: 30px;}
