--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -425,3 +425,9 @@ h3{font-size: 14px;font-weight: bold;}
 .hzjm_lx a:hover{text-decoration: none;font-weight: bold;}
 
 .ts_cont_bot{background-color: #f8f8f8; padding:15px; float: left;text-align:left;line-height: 30px;margin-top: 30px;}
+
+.dt_con{width: 100%;height: 100%;position: relative;}
+.dt_hd{position: absolute;margin-bottom: 20px;width: 100%; text-align: center;}
+
+
+
