--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -426,7 +426,7 @@ h3{font-size: 14px;font-weight: bold;}
 
 .ts_cont_bot{background-color: #f8f8f8; padding:15px; float: left;text-align:left;line-height: 30px;margin-top: 30px;}
 
-.dt_con{width: 100%;height: 100%;position: relative;}
+.dt_con{min-width: 100%;min-height: 100%;position: relative;}
 .dt_hd{position: absolute;margin-bottom: 20px;width: 100%; text-align: center;}
 
 
