微信公众号建设

--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -9,7 +9,7 @@
          }
        .amap-copyright {
               bottom:-100px;
-               display: none;
+               display:none;
         }
     </style>
 
@@ -17,10 +17,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="div-content">
-        <div style="min-width:600px;min-height:500px" id="container"></div>
+    <div class="dt_con">
+        <div id="container"></div>
     </div>
-    <div>
+    <div class="dt_hd">
         <img src="/static/images/location.png" onclick="goto_location()">
     </div>
     <div class="cabinet_info">
