微信公众号建设

--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -21,7 +21,7 @@
         <div id="container"></div>
     </div>
     <div class="dt_hd">
-        <img src="/static/images/location.png" onclick="goto_location()">
+        <img class="img_loca" src="/static/images/location.png" onclick="goto_location()">
     </div>
     <div class="cabinet_info">
 
