--- a/static/css/weixin.css
+++ b/static/css/weixin.css
@@ -429,5 +429,6 @@ h3{font-size: 14px;font-weight: bold;}
 .dt_con{min-width: 100%;min-height: 100%;position: relative;}
 .dt_hd{position: absolute;margin-bottom: 20px;width: 100%;height: 30px; text-align: center;}
 .img_loca{width: 30px; height: auto;border: none;}
+.cabinet_info{position: absolute;width: 100%;margin: 5px;height: 60px;background-color: white;}
 
 
