fix the cabinet_info hide

--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -11,6 +11,10 @@
           bottom:-100px;
            display: none;
     }
+
+    .cabinet_info{
+        display: none;
+    }
 </style>
 
 {% endblock %}
