fix the cabinet_info hide

--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -60,6 +60,10 @@
                          }
                     });
 
+                     qq.maps.event.addListener(map,"click",function(){
+                        $('.cabinet_info').hide();
+                    });
+
 
                      {% for cabinet in cabinets %}
                         var lat = {{ cabinet.6 }};
