--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -52,7 +52,7 @@
                     //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
                      var map = new qq.maps.Map(document.getElementById("container"), {
                          center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
-                         mapTypeId:qq.maps.MapTypeId.ROADMAP,
+                         disableDefaultUI: true,
                          zoom:13
                     });
 
