--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -67,6 +67,19 @@
                         var tmp_point = new qq.maps.LatLng(lat,lon);
                         addMarker(map, tmp_point, '{{ cabinet.0 }}');
                     {% endfor %}
+
+                    $(function(){
+                        $("#mapcon").bind("DOMNodeInserted",function(e){
+                                var tempCount = 0;
+                            $("#mapcon .smnoprint").siblings().each(function(){
+                                tempCount++;
+                                if(tempCount==2||tempCount==3){
+                                    $(this).remove();
+                                }
+                            });
+                        });
+                    });
+
                 }
                 else
                 {
