--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -71,6 +71,7 @@
                     $(function(){
                         $("#mapcon").bind("DOMNodeInserted",function(e){
                                 var tempCount = 0;
+                                alert('0');
                             $("#mapcon .smnoprint").siblings().each(function(){
                                 tempCount++;
                                 if(tempCount==2||tempCount==3){
