--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -69,6 +69,7 @@
                     {% endfor %}
 
                     $(function(){
+                        alert('1');
                         $("#mapcon").bind("DOMNodeInserted",function(e){
                                 var tempCount = 0;
                                 alert('0');
