--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,6 +15,19 @@
     .cabinet_info{
         display: none;
     }
+    #container {
+            width: 100%;
+            height: 100%
+        }
+        body div {
+            text-indent: 20px;
+            line-height: 22px;
+        }
+        #container {
+		   min-width:603px;
+		   min-height:767px;
+		}
+
 </style>
 
 {% endblock %}
